--- a/bootstrap/client/pom.xml
+++ b/bootstrap/client/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>bootstrap</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+    <name>Bootstrap Client</name>
     <artifactId>client</artifactId>
     <packaging>jar</packaging>
     <properties>
