--- a/bootstrap/common/pom.xml
+++ b/bootstrap/common/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>bootstrap</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+    <name>Bootstrap Common</name>
     <artifactId>common</artifactId>
     <packaging>jar</packaging>
     <properties>
