--- a/bootstrap/server/pom.xml
+++ b/bootstrap/server/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>bootstrap</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+    <name>Bootstrap Server</name>
     <artifactId>server</artifactId>
     <packaging>jar</packaging>
     <properties>
