basic host manager, log4j and config

--- a/bootstrap/server/pom.xml
+++ b/bootstrap/server/pom.xml
@@ -9,6 +9,9 @@
     <name>Bootstrap Server</name>
     <artifactId>server</artifactId>
     <packaging>jar</packaging>
+    <dependencies>
+        
+    </dependencies>
     <properties>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
