temp work on simulator

--- a/bootstrap/server/pom.xml
+++ b/bootstrap/server/pom.xml
@@ -8,6 +8,7 @@
     </parent>
     <name>Bootstrap Server</name>
     <artifactId>server</artifactId>
+    <groupId>se.sics.gvod.bootstrap</groupId>
     <packaging>jar</packaging>
     <dependencies>
         
