--- a/pom.xml
+++ b/pom.xml
@@ -8,16 +8,18 @@
     <modules>
         <module>bootstrap</module>
         <module>system</module>
+        <module>simulation</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <kompics.version>0.6.0-SNAPSHOT</kompics.version>
     </properties>
     
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <version>1.7.5</version>
+            <version>1.5.6</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -28,31 +30,43 @@
         <dependency>
             <groupId>se.sics.kompics</groupId>
             <artifactId>kompics-core</artifactId>
-            <version>0.6.0-SNAPSHOT</version>
+            <version>${kompics.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>se.sics.kompics.basic</groupId>
             <artifactId>kompics-port-network</artifactId>
-            <version>0.6.0-SNAPSHOT</version>
+            <version>${kompics.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>se.sics.kompics.basic</groupId>
             <artifactId>kompics-component-netty-network</artifactId>
-            <version>0.6.0-SNAPSHOT</version>
+            <version>${kompics.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>se.sics.kompics.basic</groupId>
             <artifactId>kompics-port-timer</artifactId>
-            <version>0.6.0-SNAPSHOT</version>
+            <version>${kompics.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>se.sics.kompics.basic</groupId>
             <artifactId>kompics-component-java-timer</artifactId>
-            <version>0.6.0-SNAPSHOT</version>
+            <version>${kompics.version}</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>se.sics.net</groupId>
+            <artifactId>netty</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>se.sics.net</groupId>
+            <artifactId>gvod-netty</artifactId>
+            <version>1.0-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
     </dependencies>
