--- a/simulation/src/main/resources/log4j.properties
+++ b/simulation/src/main/resources/log4j.properties
@@ -15,4 +15,11 @@ log4j.appender.F1.layout.ConversionPattern=%d{[HH:mm:ss,SSS]} %-5p {%c{1}} %m%n
 # We trace everything in the log file
 log4j.rootLogger=TRACE, C1
 
-log4j.logger.Kompics=TRACE
+log4j.logger.Kompics=INFO
+log4j.logger.se.sics.kompics.p2p.simulator.P2pSimulator=DEBUG
+log4j.logger.se.sics.gvod.simulation.SimManagerComp=DEBUG
+log4j.logger.se.sics.gvod.bootstrap.server.HostManager=DEBUG
+log4j.logger.se.sics.gvod.bootstrap.server.BootstrapServerComp=DEBUG
+log4j.logger.se.sics.gvod.system.HostManager=DEBUG
+log4j.logger.se.sics.gvod.system.VoDComp=DEBUG
+log4j.logger.se.sics.gvod.bootstrap.client=DEBUG
