--- a/bootstrap/common/pom.xml
+++ b/bootstrap/common/pom.xml
@@ -7,6 +7,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <name>Bootstrap Common</name>
+    <groupId>se.sics.gvod.bootstrap</groupId>
     <artifactId>common</artifactId>
     <packaging>jar</packaging>
     <properties>
