--- a/bootstrap/server/pom.xml
+++ b/bootstrap/server/pom.xml
@@ -11,7 +11,12 @@
     <groupId>se.sics.gvod.bootstrap</groupId>
     <packaging>jar</packaging>
     <dependencies>
-        
+        <dependency>
+            <groupId>se.sics.gvod</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>1.7</maven.compiler.source>
