--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>bootstrap</module>
         <module>system</module>
         <module>simulation</module>
+        <module>common</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -35,25 +36,7 @@
         </dependency>
         <dependency>
             <groupId>se.sics.kompics.basic</groupId>
-            <artifactId>kompics-port-network</artifactId>
-            <version>${kompics.version}</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>se.sics.kompics.basic</groupId>
             <artifactId>kompics-component-netty-network</artifactId>
-            <version>${kompics.version}</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>se.sics.kompics.basic</groupId>
-            <artifactId>kompics-port-timer</artifactId>
-            <version>${kompics.version}</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>se.sics.kompics.basic</groupId>
-            <artifactId>kompics-component-java-timer</artifactId>
             <version>${kompics.version}</version>
             <type>jar</type>
         </dependency>
@@ -67,6 +50,12 @@
             <groupId>se.sics.net</groupId>
             <artifactId>gvod-netty</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>17.0</version>
             <type>jar</type>
         </dependency>
     </dependencies>
