--- a/simulation/pom.xml
+++ b/simulation/pom.xml
@@ -17,6 +17,12 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>se.sics.gvod</groupId>
+            <artifactId>system</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>se.sics.kompics.simulation</groupId>
             <artifactId>kompics-simulation</artifactId>
             <version>${kompics.version}</version>
@@ -29,13 +35,11 @@
             <type>jar</type>
         </dependency>
         <dependency>
-            <groupId>se.sics.kompics.p2p.experiments</groupId>
-            <artifactId>kompics-component-p2p-simulator</artifactId>
-            <version>${kompics.version}</version>
+            <artifactId>kompics-component-netty-network</artifactId>
+            <groupId>se.sics.kompics.basic</groupId>
             <type>jar</type>
+            <version>0.6.0-SNAPSHOT</version>
         </dependency>
-
-        
     </dependencies>
     <properties>
         <maven.compiler.source>1.7</maven.compiler.source>
