temp work on system

--- a/bootstrap/server/pom.xml
+++ b/bootstrap/server/pom.xml
@@ -12,7 +12,7 @@
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
-            <groupId>se.sics.gvod</groupId>
+            <groupId>se.sics.gvod.bootstrap</groupId>
             <artifactId>common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
