--- a/common/pom.xml
+++ b/common/pom.xml
@@ -7,6 +7,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <name>Common</name>
+    <groupId>se.sics.gvod</groupId>
     <artifactId>common</artifactId>
     <packaging>jar</packaging>
     <properties>
