--- a/simulation/src/main/resources/log4j.properties
+++ b/simulation/src/main/resources/log4j.properties
@@ -17,9 +17,9 @@ log4j.rootLogger=TRACE, C1
 
 log4j.logger.Kompics=INFO
 log4j.logger.se.sics.kompics.p2p.simulator.P2pSimulator=DEBUG
-log4j.logger.se.sics.gvod.simulation.SimManagerComp=DEBUG
-log4j.logger.se.sics.gvod.bootstrap.server.HostManager=DEBUG
-log4j.logger.se.sics.gvod.bootstrap.server.BootstrapServerComp=DEBUG
-log4j.logger.se.sics.gvod.system.HostManager=DEBUG
-log4j.logger.se.sics.gvod.system.VoDComp=DEBUG
-log4j.logger.se.sics.gvod.bootstrap.client=DEBUG
+log4j.logger.se.sics.gvod.simulation.SimManagerComp=TRACE
+log4j.logger.se.sics.gvod.bootstrap.server.HostManager=TRACE
+log4j.logger.se.sics.gvod.bootstrap.server.BootstrapServerComp=TRACE
+log4j.logger.se.sics.gvod.system.HostManager=TRACE
+log4j.logger.se.sics.gvod.system.VoDComp=TRACE
+log4j.logger.se.sics.gvod.bootstrap.client=TRACE
