--- a/bootstrap/client/pom.xml
+++ b/bootstrap/client/pom.xml
@@ -17,6 +17,12 @@
     
     <dependencies>
         <dependency>
+            <groupId>se.sics.gvod</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>se.sics.gvod.bootstrap</groupId>
             <artifactId>common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
