--- a/bootstrap/server/pom.xml
+++ b/bootstrap/server/pom.xml
@@ -12,6 +12,12 @@
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
+            <groupId>se.sics.gvod</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>se.sics.gvod.bootstrap</groupId>
             <artifactId>common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
