--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
             <type>jar</type>
         </dependency>
         <dependency>
+            <groupId>se.sics</groupId>
+            <artifactId>croupier</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>17.0</version>
