--- a/simulation/src/main/resources/vod.conf
+++ b/simulation/src/main/resources/vod.conf
@@ -11,4 +11,8 @@ bootstrap {
         port = 12345
         id = 0
     }
+    client {
+        globalViewSize = 3
+        storageViewSize = 3
+    }
 }
