--- a/bootstrap/client/pom.xml
+++ b/bootstrap/client/pom.xml
@@ -9,23 +9,20 @@
     <name>Bootstrap Client</name>
     <groupId>se.sics.gvod.bootstrap</groupId>
     <artifactId>client</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <properties>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
-    </properties>
     
     <dependencies>
         <dependency>
             <groupId>se.sics.gvod</groupId>
             <artifactId>common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>se.sics.gvod.bootstrap</groupId>
             <artifactId>common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
