--- a/bootstrap/common/pom.xml
+++ b/bootstrap/common/pom.xml
@@ -9,16 +9,14 @@
     <name>Bootstrap Common</name>
     <groupId>se.sics.gvod.bootstrap</groupId>
     <artifactId>common</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <properties>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
-    </properties>
+    
     <dependencies>
         <dependency>
             <groupId>se.sics.gvod</groupId>
             <artifactId>common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
