--- a/bootstrap/server/pom.xml
+++ b/bootstrap/server/pom.xml
@@ -9,23 +9,21 @@
     <name>Bootstrap Server</name>
     <artifactId>server</artifactId>
     <groupId>se.sics.gvod.bootstrap</groupId>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
+    
     <dependencies>
         <dependency>
             <groupId>se.sics.gvod</groupId>
             <artifactId>common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>se.sics.gvod.bootstrap</groupId>
             <artifactId>common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
-    <properties>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
-    </properties>
 </project>
