--- a/common/pom.xml
+++ b/common/pom.xml
@@ -9,9 +9,6 @@
     <name>Common</name>
     <groupId>se.sics.gvod</groupId>
     <artifactId>common</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <properties>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
-    </properties>
 </project>
