--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,11 @@
         <module>common</module>
     </modules>
     <properties>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <kompics.version>0.6.0-SNAPSHOT</kompics.version>
+        <nattraverser.version>1.1-SNAPSHOT</nattraverser.version>
     </properties>
     
     <dependencies>
@@ -27,6 +30,12 @@
             <groupId>com.typesafe</groupId>
             <artifactId>config</artifactId>
             <version>1.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>17.0</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>se.sics.kompics</groupId>
@@ -43,26 +52,14 @@
         <dependency>
             <groupId>se.sics.net</groupId>
             <artifactId>netty</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>se.sics.net</groupId>
-            <artifactId>gvod-netty</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${nattraverser.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>se.sics</groupId>
             <artifactId>croupier</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${nattraverser.version}</version>
             <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>17.0</version>
-            <type>jar</type>
         </dependency>
     </dependencies>
     
