--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>system</module>
         <module>simulation</module>
         <module>common</module>
+        <module>manager</module>
     </modules>
     
     <properties>
