--- a/system/pom.xml
+++ b/system/pom.xml
@@ -18,5 +18,11 @@
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>se.sics.gvod</groupId>
+            <artifactId>manager</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
