--- a/bootstrap/client/pom.xml
+++ b/bootstrap/client/pom.xml
@@ -25,5 +25,11 @@
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>se.sics.gvod</groupId>
+            <artifactId>network</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
