--- a/bootstrap/server/src/main/resources/log4j.properties
+++ b/bootstrap/server/src/main/resources/log4j.properties
@@ -15,4 +15,5 @@ log4j.appender.F1.layout.ConversionPattern=%d{[HH:mm:ss,SSS]} %-5p {%c{1}} %m%n
 # We trace everything in the log file
 log4j.rootLogger=TRACE, C1
 
-log4j.logger.Kompics=INFO
+log4j.logger.se.sics.gvod.timer.java.JavaTimer=INFO;
+log4j.logger.io.netty.channel.nio.NioEventLoop=INFO;
