--- a/system/src/main/resources/reference.conf
+++ b/system/src/main/resources/reference.conf
@@ -1,10 +1,11 @@
-vod {
-    address {
-        port = 12345
-        id = 0
-    }
-}
 bootstrap {
+    server {
+        address {
+            ip = 193.10.67.178
+            port = 23456
+            id = 23456
+        }
+    }
     client {
         globalViewSize = 3
         storageViewSize = 3
