--- a/system/src/main/resources/reference.conf
+++ b/system/src/main/resources/reference.conf
@@ -1,8 +1,14 @@
+vod {
+    address {
+        port=22010
+        id=100
+    }
+}
 bootstrap {
     server {
         address {
             ip=193.10.67.178
-            port=21001
+            port=21010
             id=123
         }
     }
