--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -13,5 +13,6 @@
         <module>server</module>
         <module>client</module>
         <module>common</module>
+        <module>caracal-client</module>
     </modules>
 </project>
