--- a/bootstrap/common/pom.xml
+++ b/bootstrap/common/pom.xml
@@ -18,5 +18,10 @@
             <artifactId>common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>se.sics.kompics</groupId>
+            <artifactId>kompics-core</artifactId>
+            <version>${kompics.version}</version>
+        </dependency>
     </dependencies>
 </project>
