--- a/bootstrap/gserver/pom.xml
+++ b/bootstrap/gserver/pom.xml
@@ -7,16 +7,27 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <groupId>se.sics.gvod</groupId>
-    <artifactId>caracal-client</artifactId>
+    <artifactId>gserver</artifactId>
+    <name>Bootstrap GServer</name>
     <version>0.0.1-SNAPSHOT</version>
-    <name>CaracalClient</name>
     <packaging>jar</packaging>
     
     <dependencies>
         <dependency>
-            <groupId>se.sics.caracaldb</groupId>
-            <artifactId>caracaldb-core</artifactId>
-            <version>0.0.5-SNAPSHOT</version>
+            <groupId>se.sics.gvod</groupId>
+            <artifactId>common</artifactId>
+            <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>se.sics.gvod.bootstrap</groupId>
+            <artifactId>common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>se.sics.gvod</groupId>
+            <artifactId>network</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        
     </dependencies>
 </project>
