--- a/bootstrap/server/pom.xml
+++ b/bootstrap/server/pom.xml
@@ -28,6 +28,17 @@
             <artifactId>network</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>se.sics.kompics</groupId>
+            <artifactId>kompics-core</artifactId>
+            <version>${kompics.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>se.sics.kompics.basic</groupId>
+            <artifactId>kompics-component-netty-network</artifactId>
+            <version>${kompics.version}</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     
      <build>
