--- a/common/pom.xml
+++ b/common/pom.xml
@@ -11,4 +11,25 @@
     <artifactId>common</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
+    
+    <dependencies>
+        <dependency>
+            <groupId>se.sics.kompics</groupId>
+            <artifactId>kompics-core</artifactId>
+            <version>${kompics.version}</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>se.sics.net</groupId>
+            <artifactId>netty</artifactId>
+            <version>${nattraverser.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>se.sics.kompics.basic</groupId>
+                    <artifactId>kompics-address</artifactId>
+                </exclusion>
+            </exclusions>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
 </project>
