--- a/simulation/pom.xml
+++ b/simulation/pom.xml
@@ -29,6 +29,17 @@
         </dependency>
         
         <dependency>
+            <groupId>se.sics.kompics</groupId>
+            <artifactId>kompics-core</artifactId>
+            <version>${kompics.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>se.sics.kompics.basic</groupId>
+            <artifactId>kompics-component-netty-network</artifactId>
+            <version>${kompics.version}</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>se.sics.kompics.simulation</groupId>
             <artifactId>kompics-simulation</artifactId>
             <version>${kompics.version}</version>
