--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,11 @@
 /bootstrap/caracal-client/target/
 /bootstrap/gserver/target/
 /bootstrap/cserver/target/
+/bootstrap/server/cserver/target/
+/bootstrap/server/gserver/target/
+/bootstrap/server/sim-server/target/
+/bootstrap/server/caracal-server/target/
+/bootstrap/server/caracal-client/target/
+/bootstrap/server/common/target/
+/bootstrap/server/peer-manager/target/
+/bootstrap/server/simulation-peermanager/target/
