--- a/simulation/pom.xml
+++ b/simulation/pom.xml
@@ -13,8 +13,13 @@
     
     <dependencies>
         <dependency>
-            <groupId>se.sics.gvod.bootstrap</groupId>
-            <artifactId>server</artifactId>
+            <groupId>se.sics.gvod.bootstrap.server</groupId>
+            <artifactId>common-server</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>se.sics.gvod.bootstrap.server</groupId>
+            <artifactId>simulation-peermanager</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
