--- a/system/pom.xml
+++ b/system/pom.xml
@@ -13,6 +13,16 @@
     
     <dependencies>
         <dependency>
+            <groupId>se.sics.gvod.bootstrap.server</groupId>
+            <artifactId>common-server</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>se.sics.gvod.bootstrap.server</groupId>
+            <artifactId>caracal-client</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>se.sics.gvod</groupId>
             <artifactId>common</artifactId>
             <version>${project.version}</version>
