--- a/bootstrap/client/pom.xml
+++ b/bootstrap/client/pom.xml
@@ -40,5 +40,11 @@
             <version>${kompics.version}</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>se.sics.kompics.basic</groupId>
+            <artifactId>kompics-port-timer</artifactId>
+            <version>${kompics.version}</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
