--- a/bootstrap/server/common/pom.xml
+++ b/bootstrap/server/common/pom.xml
@@ -40,5 +40,11 @@
             <artifactId>network</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.javatuples</groupId>
+            <artifactId>javatuples</artifactId>
+            <version>1.2</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
