--- a/simulation/src/main/resources/reference.conf
+++ b/simulation/src/main/resources/reference.conf
@@ -2,7 +2,10 @@ vod {
     address {
         port = 23456
     }
-    maxPipeline = 3;
+    video {
+        pieceSize = 1024
+    }
+    maxPipeline = 3
 }
 bootstrap {
     server{
@@ -15,6 +18,7 @@ bootstrap {
     client {
         globalViewSize = 3
         storageViewSize = 3
+        heartbeatPeriod = 1000
     }
 }
 intSeed = 1234
