--- a/common/pom.xml
+++ b/common/pom.xml
@@ -38,5 +38,11 @@
             </exclusions>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.javatuples</groupId>
+            <artifactId>javatuples</artifactId>
+            <version>1.2</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
