--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /bootstrap/server/common/target/
 /bootstrap/server/peer-manager/target/
 /bootstrap/server/simulation-peermanager/target/
+/croupier/target/
