--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>common</module>
         <module>manager</module>
         <module>network</module>
+        <module>croupier</module>
     </modules>
     
     <properties>
