--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,8 @@
         <module>common</module>
         <module>manager</module>
         <module>network</module>
-    </modules>
+    <module>croupier-fake</module>
+  </modules>
     
     <properties>
         <maven.compiler.source>1.6</maven.compiler.source>
