--- a/simulation/src/main/resources/reference.conf
+++ b/simulation/src/main/resources/reference.conf
@@ -1,13 +1,20 @@
 vod {
-    address {
-        port = 23456
-    }
     video {
-        pieceSize = 1024
+        pieceSize=1024
+        startPieces=10
+        timeoutPeriod=1000
+    }
+    address {
+        port=22010
+        id=100
+    }
+    connection {
+        maxPipeline=10
+        updatePeriod=1000
     }
     libDir = "./lib"
     hashAlg = "SHA"
-    maxPipeline = 3
+    
 }
 bootstrap {
     server{
