--- a/system/src/main/resources/reference.conf
+++ b/system/src/main/resources/reference.conf
@@ -1,8 +1,19 @@
 vod {
+    video {
+        pieceSize=1024
+        startPieces=10
+        timeoutPeriod=1000
+    }
     address {
         port=22010
         id=100
     }
+    connection {
+        maxPipeline=10
+        updatePeriod=1000
+    }
+    libDir = "./lib"
+    hashAlg = "SHA"
 }
 bootstrap {
     server {
