--- a/simulation/src/main/resources/reference.conf
+++ b/simulation/src/main/resources/reference.conf
@@ -2,13 +2,13 @@ vod {
     video {
         pieceSize=1024
         startPieces=10
-        timeoutPeriod=1000
     }
     address {
         port=22010
         id=100
     }
     connection {
+        reqTimeoutPeriod=1000
         maxPipeline=10
         updatePeriod=1000
     }
