--- a/system/src/main/resources/log4j.properties
+++ b/system/src/main/resources/log4j.properties
@@ -15,5 +15,19 @@ log4j.appender.F1.layout.ConversionPattern=%d{[HH:mm:ss,SSS]} %-5p {%c{1}} %m%n
 # We trace everything in the log file
 log4j.rootLogger=TRACE, C1
 
-log4j.logger.se.sics.gvod.timer.java.JavaTimer=INFO;
-log4j.logger.io.netty.channel.nio.NioEventLoop=INFO;
+log4j.logger.Kompics=INFO
+log4j.logger.se.sics.gvod.timer.java.JavaTimer=INFO
+
+log4j.logger.se.sics.gvod.net=INFO
+log4j.logger.se.sics.kompics.network.netty=INFO
+log4j.logger.io.netty=INFO
+
+log4j.logger.se.sics.gvod.system.HostManagerComp=INFO
+log4j.logger.se.sics.gvod.bootstrap.client.BootstrapClientComp=TRACE
+log4j.logger.se.sics.gvod.bootstrap.server.BootstrapServerComp=TRACE
+log4j.logger.se.sics.gvod.bootstrap.cclient.BCCManagerComp=INFO
+log4j.logger.se.sics.gvod.bootstrap.cclient.BCClientComp=TRACE
+log4j.logger.se.sics.gvod.croupierfake.CroupierComp=INFO
+log4j.logger.se.sics.gvod.system.vod.VoDComp=INFO
+log4j.logger.se.sics.gvod.system.connMngr.ConnMngrComp=INFO
+log4j.logger.se.sics.gvod.system.downloadMngr.DownloadMngrComp=INFO
