--- a/system/src/main/resources/reference.conf
+++ b/system/src/main/resources/reference.conf
@@ -2,13 +2,13 @@ vod {
     video {
         pieceSize=1024
         startPieces=10
-        timeoutPeriod=1000
     }
     address {
         port=22010
         id=100
     }
     connection {
+        reqTimeoutPeriod=1000
         maxPipeline=10
         updatePeriod=1000
     }
@@ -19,12 +19,21 @@ bootstrap {
     server {
         address {
             ip=193.10.67.178
-            port=21010
-            id=123
+            port=22010
+            id=100
         }
     }
     client {
         globalViewSize = 3
         storageViewSize = 3
+        heartbeatPeriod = 10000
+    }
+    intSeed = 1234
+    sampleSize=3
+}
+caracal {
+    address {
+        ip="193.10.64.107"
+        port=45678
     }
 }
