serialization fix for video/connection

--- a/system/src/main/resources/reference.conf
+++ b/system/src/main/resources/reference.conf
@@ -2,6 +2,7 @@ vod {
     video {
         pieceSize=1024
         startPieces=10
+        descriptorUpdate=2000
     }
     address {
         port=22010
@@ -18,7 +19,7 @@ vod {
 bootstrap {
     server {
         address {
-            ip=193.10.67.178
+            ip=162.168.0.107
             port=22010
             id=100
         }
