--- a/system/src/main/resources/log4j.properties
+++ b/system/src/main/resources/log4j.properties
@@ -18,9 +18,9 @@ log4j.rootLogger=TRACE, C1
 log4j.logger.Kompics=INFO
 log4j.logger.se.sics.gvod.timer.java.JavaTimer=INFO
 
-log4j.logger.se.sics.gvod.net=INFO
-log4j.logger.se.sics.kompics.network.netty=INFO
-log4j.logger.io.netty=INFO
+log4j.logger.se.sics.gvod.net=TRACE
+log4j.logger.se.sics.kompics.network.netty=TRACE
+log4j.logger.io.netty=TRACE
 
 log4j.logger.se.sics.gvod.system.HostManagerComp=INFO
 log4j.logger.se.sics.gvod.bootstrap.client.BootstrapClientComp=TRACE
