small fix of VoDManager - load library

--- a/system/src/main/resources/reference.conf
+++ b/system/src/main/resources/reference.conf
@@ -13,13 +13,13 @@ vod {
         maxPipeline=10
         updatePeriod=1000
     }
-    libDir = "./lib"
+    libDir = "/Users/Alex/Documents/Work/Code/GVoD/video-catalog/node1"
     hashAlg = "SHA"
 }
 bootstrap {
     server {
         address {
-            ip=162.168.0.107
+            ip="193.10.67.178"
             port=22010
             id=100
         }
