--- a/system/src/main/resources/log4j.properties
+++ b/system/src/main/resources/log4j.properties
@@ -18,16 +18,18 @@ log4j.rootLogger=TRACE, C1
 log4j.logger.Kompics=INFO
 log4j.logger.se.sics.gvod.timer.java.JavaTimer=INFO
 
-log4j.logger.se.sics.gvod.net=TRACE
-log4j.logger.se.sics.kompics.network.netty=TRACE
-log4j.logger.io.netty=TRACE
+log4j.logger.se.sics.gvod.net=INFO
+log4j.logger.se.sics.kompics.network.netty=INFO
+log4j.logger.io.netty=INFO
+log4j.logger.com.barchart=INFO
 
 log4j.logger.se.sics.gvod.system.HostManagerComp=INFO
 log4j.logger.se.sics.gvod.bootstrap.client.BootstrapClientComp=TRACE
 log4j.logger.se.sics.gvod.bootstrap.server.BootstrapServerComp=TRACE
-log4j.logger.se.sics.gvod.bootstrap.cclient.BCCManagerComp=INFO
-log4j.logger.se.sics.gvod.bootstrap.cclient.BCClientComp=TRACE
+log4j.logger.se.sics.gvod.bootstrap.cclient.CaracalPSManagerComp=TRACE
+log4j.logger.se.sics.gvod.bootstrap.cclient.CaracalPeerStoreComp=TRACE
 log4j.logger.se.sics.gvod.croupierfake.CroupierComp=INFO
-log4j.logger.se.sics.gvod.system.vod.VoDComp=INFO
+log4j.logger.se.sics.gvod.system.vod.VoDComp=TRACE
 log4j.logger.se.sics.gvod.system.connMngr.ConnMngrComp=INFO
 log4j.logger.se.sics.gvod.system.downloadMngr.DownloadMngrComp=INFO
+log4j.logger.se.sics.gvod.manager.VoDManager=TRACE
