--- a/system/src/main/resources/reference.conf
+++ b/system/src/main/resources/reference.conf
@@ -13,13 +13,15 @@ vod {
         maxPipeline=10
         updatePeriod=1000
     }
-    libDir = "/Users/Alex/Documents/Work/Code/GVoD/video-catalog/node1"
+    // libDir="/Users/Alex/Documents/Work/Code/GVoD/video-catalog/node1"
+    libDir="/home/alex/Work/GVoD/video-catalog/node1"
     hashAlg = "SHA"
 }
 bootstrap {
     server {
         address {
-            ip="193.10.67.178"
+            // ip="193.10.67.178"
+            ip="193.10.66.247"
             port=22010
             id=100
         }
