caracal overlay sample fix update utility port + message added

--- a/system/src/main/resources/log4j.properties
+++ b/system/src/main/resources/log4j.properties
@@ -28,8 +28,8 @@ log4j.logger.se.sics.gvod.bootstrap.client.BootstrapClientComp=TRACE
 log4j.logger.se.sics.gvod.bootstrap.server.BootstrapServerComp=TRACE
 log4j.logger.se.sics.gvod.bootstrap.cclient.CaracalPSManagerComp=TRACE
 log4j.logger.se.sics.gvod.bootstrap.cclient.CaracalPeerStoreComp=TRACE
-log4j.logger.se.sics.gvod.croupierfake.CroupierComp=INFO
+log4j.logger.se.sics.gvod.croupierfake.CroupierComp=TRACE
 log4j.logger.se.sics.gvod.system.vod.VoDComp=TRACE
-log4j.logger.se.sics.gvod.system.connMngr.ConnMngrComp=INFO
-log4j.logger.se.sics.gvod.system.downloadMngr.DownloadMngrComp=INFO
+log4j.logger.se.sics.gvod.system.connMngr.ConnMngrComp=TRACE
+log4j.logger.se.sics.gvod.system.downloadMngr.DownloadMngrComp=TRACE
 log4j.logger.se.sics.gvod.manager.VoDManager=TRACE
