network package refactor and hash mechanism

--- a/simulation/src/main/resources/log4j.properties
+++ b/simulation/src/main/resources/log4j.properties
@@ -17,18 +17,19 @@ log4j.rootLogger=TRACE, C1
 
 log4j.logger.Kompics=INFO
 
-log4j.logger.se.sics.gvod.simulation.core.P2pSimulator=INFO
-log4j.logger.se.sics.gvod.simulation.SimManagerComp=INFO
+log4j.logger.se.sics.gvod.simulation.core.P2pSimulator=TRACE
+log4j.logger.se.sics.gvod.simulation.SimManagerComp=TRACE
 
 log4j.logger.io.netty.channel.io.NioEventLoop=INFO
 log4j.logger.io.netty.channel.udt.ResourceManagerUDT=INFO
 
 log4j.logger.se.sics.gvod.bootstrap.server.HostManager=INFO
-log4j.logger.se.sics.gvod.bootstrap.server.BootstrapServerComp=INFO
-log4j.logger.se.sics.gvod.bootstrap.server.simulation.SimPMComp=INFO
+log4j.logger.se.sics.gvod.bootstrap.server.BootstrapServerComp=TRACE
+log4j.logger.se.sics.gvod.bootstrap.server.simulation.SimPMComp=TRACE
 log4j.logger.se.sics.gvod.system.HostManagerComp=INFO
-log4j.logger.se.sics.gvod.bootstrap.client.BootstrapClientComp=INFO
+log4j.logger.se.sics.gvod.bootstrap.client.BootstrapClientComp=TRACE
 log4j.logger.se.sics.gvod.croupierfake.CroupierComp=INFO
-log4j.logger.se.sics.gvod.system.vod.VoDComp=INFO
+log4j.logger.se.sics.gvod.system.vod.VoDComp=TRACE
 log4j.logger.se.sics.gvod.system.connMngr.ConnMngrComp=INFO
 log4j.logger.se.sics.gvod.system.downloadMngr.DownloadMngrComp=INFO
+log4j.logger.se.sics.gvod.system.vodmngr.VoDManager=TRACE
