--- a/network/pom.xml
+++ b/network/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>se.sics.net</groupId>
             <artifactId>netty</artifactId>
-            <version>1.1-SNAPSHOT</version>
+            <version>${nattraverser.version}</version>
         </dependency>
         <dependency>
             <groupId>org.javatuples</groupId>
