--- a/system/src/main/resources/log4j.properties
+++ b/system/src/main/resources/log4j.properties
@@ -31,7 +31,7 @@ log4j.logger.se.sics.gvod.bootstrap.cclient.CaracalPSManagerComp=INFO
 log4j.logger.se.sics.gvod.bootstrap.cclient.CaracalPeerStoreComp=TRACE
 log4j.logger.se.sics.gvod.croupierfake.CroupierComp=INFO
 log4j.logger.se.sics.gvod.system.vod.VoDComp=INFO
-log4j.logger.se.sics.gvod.system.connMngr.ConnMngrComp=INFO
+log4j.logger.se.sics.gvod.system.connMngr.ConnMngrComp=TRACE
 log4j.logger.se.sics.gvod.system.downloadMngr.DownloadMngrComp=INFO
 log4j.logger.se.sics.gvod.manager.VoDManager=INFO
 log4j.logger.se.sics.gvod.system.vodmngr.VoDManager=INFO
