code for block download

--- a/system/src/main/resources/application.conf
+++ b/system/src/main/resources/application.conf
@@ -3,6 +3,9 @@ vod {
         port=22222
         id=100
     }
+    video {
+        mediaPort=58026
+    }
     libDir="/Users/Alex/Documents/Work/Code/GVoD/video-catalog/node1"
 }
 bootstrap {
