--- a/system/src/main/resources/reference.conf
+++ b/system/src/main/resources/reference.conf
@@ -1,6 +1,7 @@
 vod {
     video {
         pieceSize=1024
+        piecesPerBlock=1024
         startPieces=10
         descriptorUpdate=2000
     }
