--- a/system/src/main/resources/log4j.properties
+++ b/system/src/main/resources/log4j.properties
@@ -32,6 +32,6 @@ log4j.logger.se.sics.gvod.bootstrap.cclient.CaracalPeerStoreComp=INFO
 log4j.logger.se.sics.gvod.croupierfake.CroupierComp=INFO
 log4j.logger.se.sics.gvod.system.vod.VoDComp=INFO
 log4j.logger.se.sics.gvod.system.connMngr.ConnMngrComp=INFO
-log4j.logger.se.sics.gvod.system.downloadMngr.DownloadMngrComp=TRACE
+log4j.logger.se.sics.gvod.system.downloadMngr.DownloadMngrComp=INFO
 log4j.logger.se.sics.gvod.manager.VoDManager=INFO
 log4j.logger.se.sics.gvod.system.vodmngr.VoDManager=INFO
