fix for video plugin - after testing

--- a/system/src/main/resources/log4j.properties
+++ b/system/src/main/resources/log4j.properties
@@ -18,8 +18,8 @@ log4j.rootLogger=TRACE, C1
 log4j.logger.Kompics=INFO
 log4j.logger.se.sics.gvod.timer.java.JavaTimer=INFO
 
-log4j.logger.se.sics.gvod.net=TRACE
-log4j.logger.se.sics.kompics.network.netty=TRACE
+log4j.logger.se.sics.gvod.net=INFO
+log4j.logger.se.sics.kompics.network.netty=INFO
 log4j.logger.se.sics.kompics.network.netty.serialization=INFO
 log4j.logger.io.netty=INFO
 log4j.logger.com.barchart=INFO
@@ -30,8 +30,7 @@ log4j.logger.se.sics.gvod.bootstrap.server.BootstrapServerComp=INFO
 log4j.logger.se.sics.gvod.bootstrap.cclient.CaracalPSManagerComp=INFO
 log4j.logger.se.sics.gvod.bootstrap.cclient.CaracalPeerStoreComp=INFO
 log4j.logger.se.sics.gvod.croupierfake.CroupierComp=INFO
-log4j.logger.se.sics.gvod.system.vod.VoDComp=INFO
-log4j.logger.se.sics.gvod.system.connMngr.ConnMngrComp=INFO
-log4j.logger.se.sics.gvod.system.downloadMngr.DownloadMngrComp=INFO
+log4j.logger.se.sics.gvod.core.VoDComp=INFO
+log4j.logger.se.sics.gvod.core.connMngr.ConnMngrComp=INFO
+log4j.logger.se.sics.gvod.core.downloadMngr.DownloadMngrComp=INFO
 log4j.logger.se.sics.gvod.manager.VoDManager=INFO
-log4j.logger.se.sics.gvod.system.vodmngr.VoDManager=INFO
