--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@
 /video-plugin/target/
 /videoplugin/videoplugin-api/target/
 /videoplugin/videoplugin-impl/target/
+/videoplugin/JavaApplication2/nbproject/private/
+/videoplugin/JavaApplication2/build/
+/videoplugin/JavaApplication2/dist/
