--- a/system/src/main/resources/log4j.properties
+++ b/system/src/main/resources/log4j.properties
@@ -19,7 +19,7 @@ log4j.logger.Kompics=INFO
 log4j.logger.se.sics.gvod.timer.java.JavaTimer=INFO
 
 log4j.logger.se.sics.gvod.net=INFO
-log4j.logger.se.sics.kompics.network.netty=INFO
+log4j.logger.se.sics.kompics.network.netty=TRACE
 log4j.logger.se.sics.kompics.network.netty.serialization=INFO
 log4j.logger.io.netty=INFO
 log4j.logger.com.barchart=INFO
@@ -28,7 +28,7 @@ log4j.logger.se.sics.gvod.system.HostManagerComp=INFO
 log4j.logger.se.sics.gvod.bootstrap.client.BootstrapClientComp=INFO
 log4j.logger.se.sics.gvod.bootstrap.server.BootstrapServerComp=INFO
 log4j.logger.se.sics.gvod.bootstrap.cclient.CaracalPSManagerComp=INFO
-log4j.logger.se.sics.gvod.bootstrap.cclient.CaracalPeerStoreComp=INFO
+log4j.logger.se.sics.gvod.bootstrap.cclient.CaracalPeerStoreComp=TRACE
 log4j.logger.se.sics.gvod.croupierfake.CroupierComp=INFO
 log4j.logger.se.sics.gvod.core.VoDComp=INFO
 log4j.logger.se.sics.gvod.core.connMngr.ConnMngrComp=INFO
